header values and logo animation

--- a/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
+++ b/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
@@ -71,6 +71,9 @@
 	<ItemGroup Condition="'$(Stage)' == 'pack'">
 		<None Include="$(MSBuildProjectDirectory)\AddPackageFiles\**\*" Exclude="$(MSBuildProjectDirectory)\AddPackageFiles\ReleaseNotes.txt" Pack="true" PackagePath="" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Include="Extensions\IApplicationBuilderExtensions\UseHeaderValuesFilteringMiddleware.cs" />
+	</ItemGroup>
 
 
 
