--- a/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
+++ b/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
@@ -53,7 +53,7 @@
 		<Authors>Carsten Riedel</Authors>
 		<Owners>Carsten Riedel</Owners>
 		<PackageId>$(AssemblyName)</PackageId>
-		<PackageTags>dotnet;tool;BlackBytesBox;bbdist</PackageTags>
+		<PackageTags>dotnet;tool;BlackBytesBox;Routed;RequestFilters</PackageTags>
 		<PackageProjectUrl>https://github.com/carsten-riedel/BlackBytesBox.Routed.RequestFilters</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/carsten-riedel/BlackBytesBox.Routed.RequestFilters</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
@@ -72,7 +72,7 @@
 		<None Include="$(MSBuildProjectDirectory)\AddPackageFiles\**\*" Exclude="$(MSBuildProjectDirectory)\AddPackageFiles\ReleaseNotes.txt" Pack="true" PackagePath="" />
 	</ItemGroup>
 	<ItemGroup>
-	  <None Include="Extensions\IApplicationBuilderExtensions\UseHeaderValuesFilteringMiddleware.cs" />
+	  <None Include="Extensions\IApplicationBuilderExtensions\UseHeaderValuesRequiredFilteringMiddleware.cs" />
 	</ItemGroup>
 
 
