--- a/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
+++ b/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
@@ -73,5 +73,8 @@
 	<ItemGroup>
 		<None Include="Extensions\IApplicationBuilderExtensions\UseHeaderValuesRequiredFilteringMiddleware.cs" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="NewFolder\" />
+	</ItemGroup>
 
 </Project>
