--- a/docs/production/docfx/xrefmap.yml
+++ b/docs/production/docfx/xrefmap.yml
@@ -583,6 +583,90 @@ references:
   isSpec: "True"
   fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IApplicationBuilderExtensions.IApplicationBuilderExtensions.UseUserAgentFilteringMiddleware
   nameWithType: IApplicationBuilderExtensions.UseUserAgentFilteringMiddleware
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions
+  name: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.html
+  commentId: N:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions
+  nameWithType: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions
+  name: IPAddressExtensions
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.html
+  commentId: T:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions
+  nameWithType: IPAddressExtensions
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo
+  name: IPAddressExtensions.IpInfo
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.html
+  commentId: T:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo
+  nameWithType: IPAddressExtensions.IpInfo
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.RemoteIp
+  name: RemoteIp
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpInfo_RemoteIp
+  commentId: P:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.RemoteIp
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.RemoteIp
+  nameWithType: IPAddressExtensions.IpInfo.RemoteIp
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.RemoteIp*
+  name: RemoteIp
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpInfo_RemoteIp_
+  commentId: Overload:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.RemoteIp
+  isSpec: "True"
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.RemoteIp
+  nameWithType: IPAddressExtensions.IpInfo.RemoteIp
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.Version
+  name: Version
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpInfo_Version
+  commentId: P:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.Version
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.Version
+  nameWithType: IPAddressExtensions.IpInfo.Version
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.Version*
+  name: Version
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpInfo_Version_
+  commentId: Overload:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.Version
+  isSpec: "True"
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpInfo.Version
+  nameWithType: IPAddressExtensions.IpInfo.Version
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion
+  name: IPAddressExtensions.IpVersion
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.html
+  commentId: T:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion
+  nameWithType: IPAddressExtensions.IpVersion
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.IPv4
+  name: IPv4
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpVersion_IPv4
+  commentId: F:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.IPv4
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.IPv4
+  nameWithType: IPAddressExtensions.IpVersion.IPv4
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.IPv6
+  name: IPv6
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpVersion_IPv6
+  commentId: F:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.IPv6
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.IPv6
+  nameWithType: IPAddressExtensions.IpVersion.IPv6
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.Unknown
+  name: Unknown
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_IpVersion_Unknown
+  commentId: F:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.Unknown
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.IpVersion.Unknown
+  nameWithType: IPAddressExtensions.IpVersion.Unknown
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo(System.Net.IPAddress)
+  name: ToIpInfo(IPAddress?)
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_ToIpInfo_System_Net_IPAddress_
+  commentId: M:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo(System.Net.IPAddress)
+  name.vb: ToIpInfo(IPAddress)
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo(System.Net.IPAddress?)
+  fullName.vb: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo(System.Net.IPAddress)
+  nameWithType: IPAddressExtensions.ToIpInfo(IPAddress?)
+  nameWithType.vb: IPAddressExtensions.ToIpInfo(IPAddress)
+- uid: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo*
+  name: ToIpInfo
+  href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.html#BlackBytesBox_Routed_RequestFilters_Extensions_IPAddressExtensions_IPAddressExtensions_ToIpInfo_
+  commentId: Overload:BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo
+  isSpec: "True"
+  fullName: BlackBytesBox.Routed.RequestFilters.Extensions.IPAddressExtensions.IPAddressExtensions.ToIpInfo
+  nameWithType: IPAddressExtensions.ToIpInfo
 - uid: BlackBytesBox.Routed.RequestFilters.Extensions.IServiceCollectionExtensions
   name: BlackBytesBox.Routed.RequestFilters.Extensions.IServiceCollectionExtensions
   href: api/BlackBytesBox.Routed.RequestFilters.Extensions.IServiceCollectionExtensions.html
