--- a/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
+++ b/source/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters/BlackBytesBox.Routed.RequestFilters.csproj
@@ -73,5 +73,8 @@
 	<ItemGroup>
 		<None Include="Extensions\IApplicationBuilderExtensions\UseHeaderValuesRequiredFilteringMiddleware.cs" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="DnsClient" Version="1.8.0" />
+	</ItemGroup>
 
 </Project>
